--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+
+#Flash Builder Ignores
+.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache/
+.metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
+.metadata/.plugins/org.eclipse.core.resources/.root
