Cleaned up some eclipse files that shouldn't be version controlled

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache/
 .metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
 .metadata/.plugins/org.eclipse.core.resources/.root
+
+.metadata/.plugins/com.adobe.flexbuilder.codemodel/projects/projectUnits/library_*.cache
