--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 
 #Flash Builder Ignores
-.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache/
-.metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
-.metadata/.plugins/org.eclipse.core.resources/.root
-
-.metadata/.plugins/com.adobe.flexbuilder.codemodel/projects/projectUnits/library_*.cache
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache/
+src/.metadata/.plugins/com.adobe.flexide.editorcore/imageCache
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
+src/.metadata/.plugins/org.eclipse.core.resources/.root
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
