--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/.metadata/.plugins/com.adobe.flexide.editorcore/imageCache
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
 src/.metadata/.plugins/org.eclipse.core.resources/.root
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/swcCommentCache
