Start of flash refactor. Cleanedup some Eclipse files that shouldn't be version controlled.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 .DS_Store
 
 #Flash Builder Ignores
-src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache/
 src/.metadata/.plugins/com.adobe.flexide.editorcore/imageCache
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/SwcCache/
 src/.metadata/.plugins/org.eclipse.core.resources/.root
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/swcCommentCache
+src/.metadata/.plugins/org.eclipse.core.resources/.history
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/projects/projectUnits/*.cache
+src/.metadata/*.cache
+src/.metadata/*s_cache
+src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
