--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/projects/projectUnits/*.c
 src/.metadata/*.cache
 src/.metadata/*s_cache
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
+node_modules
