More work on Flash SDK update. Added test for dynamic controller to see if it's feasible to run animations on the device

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ src/.metadata/*.cache
 src/.metadata/*s_cache
 src/.metadata/.plugins/com.adobe.flexbuilder.codemodel/searchCache
 node_modules
+src/.metadata/.plugins/*.snap
