--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 #-----Flash Builder----
 */.metadata/.plugins/
-!*/.metadata/.plugins/org.eclipse.core.resources/
+!.metadata/.plugins/org.eclipse.core.resources/
 */.metadata/.mylyn/
 */.metadata/.lock
 */.metadata/.log
