Updated .gitignore one last time to explicitly include the necessary plugin metadata for opening workspaces with projects intact.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 
 #-----Flash Builder----
-*/.metadata/.plugins/
-!.metadata/.plugins/org.eclipse.core.resources/
+*/.metadata/.plugins/*
+!*/.metadata/.plugins/org.eclipse.core.resources/
 */.metadata/.mylyn/
 */.metadata/.lock
 */.metadata/.log
