Modified gitignore again, hopefully it will work better now

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
 
 #-----Flash Builder----
-*/.metadata/.plugins/*/*
+*/.metadata/.plugins/*
+!*/.metadata/.plugins/org.eclipse.core.resources/
+*/.metadata/.plugins/org.eclipse.core.resources/*
 !*/.metadata/.plugins/org.eclipse.core.resources/.projects/
 */.metadata/.mylyn/
 */.metadata/.lock
