--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 .DS_Store
 
-#-----Flash Builder----
-*/.metadata/.plugins/*
-!*/.metadata/.plugins/org.eclipse.core.resources/
-*/.metadata/.plugins/org.eclipse.core.resources/*
-!*/.metadata/.plugins/org.eclipse.core.resources/.projects/
-*/.metadata/.mylyn/
-*/.metadata/.lock
-*/.metadata/.log
+#-----Flash Builder Project Ignores----
+swf/sdk/.metadata
